# 3b1b-at-home

./: .env.example  .gitignore  Claude.md  README.md  app.py  config.yaml  main.py  pyproject.toml  spec.md
api/: routes.py
docs/plans/: 2026-03-08-audio-led-pipeline-design.md  2026-03-08-audio-led-pipeline.md  2026-03-08-mathmotion-pipeline.md  2026-03-08-remove-duration-input.md  2026-03-09-agentic-render-repair-design.md  2026-03-09-agentic-render-repair.md  2026-03-09-litellm-integration-design.md  2026-03-09-litellm-integration.md  2026-03-09-qwen3-tts-design.md  2026-03-09-qwen3-tts-implementation.md  2026-03-10-upload-script-design.md  2026-03-10-upload-script.md
mathmotion/: manim_ext.py  pipeline.py  voiceover.py
mathmotion/llm/: base.py  factory.py  gemini.py  litellm.py  ollama.py  openrouter.py
mathmotion/schemas/: script.py
mathmotion/stages/: compose.py  generate.py  outline.py  render.py  repair.py  scene_code.py  scene_script.py  tts.py
mathmotion/tts/: base.py  factory.py  kokoro.py  qwen3.py  vibevoice.py
prompts/: outline.txt  scene_code.txt  scene_script.txt  system_prompt.txt
static/: index.html
tests/: conftest.py  test_api_resume.py  test_api_upload.py  test_compose.py  test_config.py  test_job_state.py  test_litellm_provider.py  test_manim_ext.py  test_pipeline_resume.py  test_pipeline_upload.py  test_qwen3_engine.py  test_schemas_new.py  test_stage_compose.py  test_stage_outline.py  test_stage_scene_code.py  test_stage_scene_script.py  test_stage_tts_sidecar.py  test_tts_fallback.py  test_validation.py  test_voiceover.py
(+15 files in other folders)
